# mds-data-model

./: .pre-commit-config.yaml  README.md  pyproject.toml
schema/: object.schema.json
scripts/: generate_json_schema.py  scrape_definitions.py
scripts/data/: acquisition-information.json  address-information.json  audit-information.json  collections-review-information.json  common-procedural-units.json  condition-check-technical-assessment-information.json  conservation-and-treatment-information.json  damage-loss-information.json  date-information.json  disposal-information.json  indemnity-information.json  insurance-information.json  loan-in-information.json  loan-out-information.json  location-information.json  movement-information.json  object-collection-information.json  object-collections-review-information.json  object-condition-and-technical-assessment-information.json  object-conservation-and-treatment-information.json  object-description-information.json  object-entry-information.json  object-exit-information.json  object-history-and-association-information.json  object-identification-information.json  object-location-information.json  object-owners-contribution-information.json  object-production-information.json  object-requirement-information.json  object-users-contribution-information.json  organisation-information.json  people-information.json  person-information.json  place-information.json  process-information.json  reference-information.json  reproduction-information.json  rights-information.json  rights-out-information.json  use-and-provision-of-information.json  (+3 more)
src/mds_data_model/: __init__.py  introspection.py  schema.py
src/mds_data_model/models/: __init__.py  acquisition.py  address.py  common.py  date.py  dimension.py  inscription_content.py  license.py  location.py  material.py  object.py  organisation.py  people.py  person.py  place.py  reference.py  technique.py
tests/: test_introspection.py  test_json_schema.py  test_model_building.py  test_prefixes.py
