[project]
name = "mds-data-model"
version = "0.1.0"
description = "A data model, derived from Spectrum 5.1 to match, and then further constrain, the MDS interpretation of it. "
readme = "README.md"
authors = [
    { name = "William Thorne", email = "wthorne1@sheffield.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic[email]>=2.13.4",
]

[tool.ruff]
exclude = [
    "dist",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    ".git"
]

line-length = 119
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modern syntax for your py312 target)
    "B",    # flake8-bugbear (likely bugs)
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # Ruff-specific rules
]
ignore = []

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyrefly]
project-includes = ["src"]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "pyrefly>=1.0.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "tenacity>=9.1.4",
]
